# Peak-Discord-Video-Compressor

./: .gitignore  Cargo.toml  Peak.spec  README.md  app.js  build.bat  default.json  index.html  main.py  main.rs  requirements.txt  style.css  tauri.conf.json
css/: base.css  controls.css  layout.css  preview-modal.css  queue.css  settings.css  titlebar.css  trim-modal.css
js/: compressor.js  preview.js  queue.js  settings.js  sliders.js  trim.js
src/: app.js  index.html  lib.rs  main.rs  style.css
src/css/: base.css  controls.css  layout.css  preview-modal.css  queue.css  settings.css  titlebar.css
src/js/: compressor.js  layout-resizer.js  preview.js  queue.js  settings.js  sliders.js  trim.js
