[package]
name = "peak"
version = "1.6.0"
edition = "2021"

[lib]
name = "peak_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["sync"] }
base64       = "0.22"
dirs         = "5"
which        = "6"

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
strip        = true
